--- a/style.css
+++ b/style.css
@@ -7,15 +7,27 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #E3F2FD;
+
+}
 .wrapper {
     width: 65vmin;
     height: 70vmin;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    border-radius: 5px;
     background-color: #293447;
 
-}
+} 
 
 .game-details {
-    
+
     color: aliceblue;
     font-size: 1.2rem;
     font-weight: 500;
@@ -23,4 +35,19 @@
     display: flex;
     justify-content: space-between;
 
+}
+
+/* 
+it create 30 sqare box 
+*/
+.play-board {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template: repeat(30,1fr) /repeat(30,1fr);
+}
+
+.play-board .food {
+    background: red;
+    
 }
